--- a/3D Project DirectX/DirectXEngine/DirectXEngine.vcxproj
+++ b/3D Project DirectX/DirectXEngine/DirectXEngine.vcxproj
@@ -199,10 +199,17 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
     </FxCompile>
+    <FxCompile Include="ResourcesFiles\DeferredGeometryShader.hlsl" />
+    <FxCompile Include="ResourcesFiles\DeferredPixelShader.hlsl" />
+    <FxCompile Include="ResourcesFiles\DeferredPixelShaderNormalMapping.hlsl" />
+    <FxCompile Include="ResourcesFiles\DeferredVertexShader.hlsl" />
     <FxCompile Include="ResourcesFiles\GeometryShader.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Geometry</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
     </FxCompile>
+    <FxCompile Include="ResourcesFiles\LastPassGeometryShader.hlsl" />
+    <FxCompile Include="ResourcesFiles\LastPassPixelShader.hlsl" />
+    <FxCompile Include="ResourcesFiles\LastPassVertexShader.hlsl" />
     <FxCompile Include="VertexShader.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
