--- a/3D Project DirectX/DirectXEngine/DirectXEngine.vcxproj.filters
+++ b/3D Project DirectX/DirectXEngine/DirectXEngine.vcxproj.filters
@@ -34,6 +34,15 @@
     <Filter Include="Source Files\Other">
       <UniqueIdentifier>{f0870692-a14f-45aa-8d03-7480a5cbf503}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Particles">
+      <UniqueIdentifier>{b7420ecc-57b6-4f1c-99ba-63b61edba8cf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Deffered">
+      <UniqueIdentifier>{c383c2a0-9268-4f82-8ed5-1d9b5cd6229a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\other">
+      <UniqueIdentifier>{afbce25b-d78f-4efa-aa41-5a13bfbc513e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -100,6 +109,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Mesh\Terrain.cpp">
+      <Filter>Source Files\Mesh</Filter>
+    </ClCompile>
+    <ClCompile Include="Particle.cpp">
       <Filter>Source Files\Mesh</Filter>
     </ClCompile>
   </ItemGroup>
@@ -182,40 +194,52 @@
     <ClInclude Include="Mesh\Terrain.h">
       <Filter>Header Files\Mesh</Filter>
     </ClInclude>
+    <ClInclude Include="Particle.h">
+      <Filter>Header Files\Mesh</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="PixelShader.hlsl">
-      <Filter>Resource Files</Filter>
-    </FxCompile>
-    <FxCompile Include="VertexShader.hlsl">
-      <Filter>Resource Files</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\GeometryShader.hlsl">
-      <Filter>Resource Files</Filter>
-    </FxCompile>
-    <FxCompile Include="PixelShaderDefault.hlsl">
-      <Filter>Resource Files</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\LastPassVertexShader.hlsl">
-      <Filter>Resource Files</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\LastPassPixelShader.hlsl">
-      <Filter>Resource Files</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\LastPassGeometryShader.hlsl">
-      <Filter>Resource Files</Filter>
-    </FxCompile>
     <FxCompile Include="ResourcesFiles\DeferredGeometryShader.hlsl">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Deffered</Filter>
     </FxCompile>
     <FxCompile Include="ResourcesFiles\DeferredPixelShader.hlsl">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Deffered</Filter>
     </FxCompile>
     <FxCompile Include="ResourcesFiles\DeferredPixelShaderNormalMapping.hlsl">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Deffered</Filter>
     </FxCompile>
     <FxCompile Include="ResourcesFiles\DeferredVertexShader.hlsl">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Deffered</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\GeometryShader.hlsl">
+      <Filter>Resource Files\Deffered</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\LastPassGeometryShader.hlsl">
+      <Filter>Resource Files\Deffered</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\LastPassPixelShader.hlsl">
+      <Filter>Resource Files\Deffered</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\LastPassVertexShader.hlsl">
+      <Filter>Resource Files\Deffered</Filter>
+    </FxCompile>
+    <FxCompile Include="ParticleGS.hlsl">
+      <Filter>Resource Files\Particles</Filter>
+    </FxCompile>
+    <FxCompile Include="ParticlePS.hlsl">
+      <Filter>Resource Files\Particles</Filter>
+    </FxCompile>
+    <FxCompile Include="ParticleVS.hlsl">
+      <Filter>Resource Files\Particles</Filter>
+    </FxCompile>
+    <FxCompile Include="VertexShader.hlsl">
+      <Filter>Resource Files\other</Filter>
+    </FxCompile>
+    <FxCompile Include="PixelShader.hlsl">
+      <Filter>Resource Files\other</Filter>
+    </FxCompile>
+    <FxCompile Include="PixelShaderDefault.hlsl">
+      <Filter>Resource Files\other</Filter>
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
