--- a/3D Project DirectX/DirectXEngine/DirectXEngine.vcxproj
+++ b/3D Project DirectX/DirectXEngine/DirectXEngine.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="RenderWindow.cpp" />
     <ClCompile Include="Skybox.cpp" />
-    <ClCompile Include="Skybox2.cpp" />
+    <ClCompile Include="SkyDome.cpp" />
     <ClCompile Include="TGATexture.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -165,6 +165,7 @@
     <ClInclude Include="Lib\Shaders.h" />
     <ClInclude Include="Lib\Texture.h" />
     <ClInclude Include="Lib\Transform.h" />
+    <ClInclude Include="Lib\VertexBuffer.h" />
     <ClInclude Include="Lights.h" />
     <ClInclude Include="Mesh\Primitive.h" />
     <ClInclude Include="Mesh.h">
@@ -174,9 +175,8 @@
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="RenderWindow.h" />
     <ClInclude Include="Skybox.h" />
-    <ClInclude Include="Skybox2.h" />
+    <ClInclude Include="SkyDome.h" />
     <ClInclude Include="TGATexture.h" />
-    <ClInclude Include="VertexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="PixelShader.hlsl">
@@ -231,6 +231,14 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="ResourcesFiles\SkyboxVS.hlsl" />
+    <FxCompile Include="ResourcesFiles\SkydomePs.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\SkydomeVs.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+    </FxCompile>
     <FxCompile Include="VertexShader.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
