--- a/3D Project DirectX/DirectXEngine/DirectXEngine.vcxproj.filters
+++ b/3D Project DirectX/DirectXEngine/DirectXEngine.vcxproj.filters
@@ -1,248 +1,256 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Source Files\imgui">
-      <UniqueIdentifier>{a1603767-b655-4114-9e79-ea83597aa3f3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Inputs">
-      <UniqueIdentifier>{d72852cb-6b44-43ec-b42f-90075d35611e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Inputs">
-      <UniqueIdentifier>{d7536f46-9135-47f0-ab11-c39c112a4b28}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Mesh">
-      <UniqueIdentifier>{a6a723f6-445e-4613-a00a-4afc7a09c44d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Mesh">
-      <UniqueIdentifier>{f76b0cfd-4487-45b6-80e6-714522639a1a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Others">
-      <UniqueIdentifier>{4ec8ec44-dbb3-4c58-b5ad-fb18740604be}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Other">
-      <UniqueIdentifier>{f0870692-a14f-45aa-8d03-7480a5cbf503}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resource Files\Particles">
-      <UniqueIdentifier>{b7420ecc-57b6-4f1c-99ba-63b61edba8cf}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resource Files\Deffered">
-      <UniqueIdentifier>{c383c2a0-9268-4f82-8ed5-1d9b5cd6229a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resource Files\other">
-      <UniqueIdentifier>{afbce25b-d78f-4efa-aa41-5a13bfbc513e}</UniqueIdentifier>
-    </Filter>
+    <FxCompile Include="ResourcesFiles\DeferredGeometryShader.hlsl">
+      <Filter>Shader Files\Deferred</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\DeferredPixelShader.hlsl">
+      <Filter>Shader Files\Deferred</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\DeferredPixelShaderNormalMapping.hlsl">
+      <Filter>Shader Files\Deferred</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\DeferredVertexShader.hlsl">
+      <Filter>Shader Files\Deferred</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\LastPassGeometryShader.hlsl">
+      <Filter>Shader Files\LastPass</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\LastPassPixelShader.hlsl">
+      <Filter>Shader Files\LastPass</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\LastPassVertexShader.hlsl">
+      <Filter>Shader Files\LastPass</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\SkyboxPS.hlsl">
+      <Filter>Shader Files\Skybox</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\SkyboxVS.hlsl">
+      <Filter>Shader Files\Skybox</Filter>
+    </FxCompile>
+    <FxCompile Include="ParticleGS.hlsl">
+      <Filter>Shader Files\Particle</Filter>
+    </FxCompile>
+    <FxCompile Include="ParticlePS.hlsl">
+      <Filter>Shader Files\Particle</Filter>
+    </FxCompile>
+    <FxCompile Include="ParticleVS.hlsl">
+      <Filter>Shader Files\Particle</Filter>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\GeometryShader.hlsl">
+      <Filter>Shader Files\Other Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="PixelShader.hlsl">
+      <Filter>Shader Files\Other Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="PixelShaderDefault.hlsl">
+      <Filter>Shader Files\Other Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="VertexShader.hlsl">
+      <Filter>Shader Files\Other Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RenderWindow.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Graphics.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui.cpp">
-      <Filter>Source Files\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>Source Files\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>Source Files\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_impl_dx11.cpp">
-      <Filter>Source Files\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_impl_win32.cpp">
-      <Filter>Source Files\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>Source Files\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="Input\Camera.cpp">
-      <Filter>Source Files\Inputs</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObjects.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Mesh\Primitive.cpp">
-      <Filter>Source Files\Mesh</Filter>
-    </ClCompile>
-    <ClCompile Include="LoadObj.cpp">
-      <Filter>Source Files\Other</Filter>
-    </ClCompile>
-    <ClCompile Include="Mesh.cpp">
-      <Filter>Source Files\Mesh</Filter>
-    </ClCompile>
-    <ClCompile Include="Lib\Clock.cpp">
-      <Filter>Source Files\Other</Filter>
-    </ClCompile>
     <ClCompile Include="Lib\Transform.cpp">
-      <Filter>Source Files\Other</Filter>
-    </ClCompile>
-    <ClCompile Include="Lib\Texture.cpp">
-      <Filter>Source Files\Other</Filter>
-    </ClCompile>
-    <ClCompile Include="Lib\Shaders.cpp">
-      <Filter>Source Files\Other</Filter>
-    </ClCompile>
-    <ClCompile Include="Lights.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="QuadTree.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Mesh\Terrain.cpp">
-      <Filter>Source Files\Mesh</Filter>
+      <Filter>C++ Files</Filter>
     </ClCompile>
     <ClCompile Include="Particle.cpp">
-      <Filter>Source Files\Mesh</Filter>
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Mesh\Primitive.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="QuadTree.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderWindow.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Lib\Shaders.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Skybox.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Mesh\Terrain.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Lib\Texture.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TGATexture.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Mesh.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LoadObj.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Lights.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Graphics.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObjects.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Lib\Clock.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Input\Camera.cpp">
+      <Filter>C++ Files</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_demo.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_draw.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_dx11.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_win32.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_widgets.cpp">
+      <Filter>imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Engine.h">
+    <ClInclude Include="Input\Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RenderWindow.h">
+    <ClInclude Include="Lib\Clock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lib\ConstantBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DirectXHelp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Graphics.h">
+    <ClInclude Include="Engine.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imconfig.h">
-      <Filter>Source Files\imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui.h">
-      <Filter>Source Files\imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_dx11.h">
-      <Filter>Source Files\imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_win32.h">
-      <Filter>Source Files\imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>Source Files\imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>Source Files\imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>Source Files\imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>Source Files\imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="Input\Camera.h">
-      <Filter>Header Files\Inputs</Filter>
     </ClInclude>
     <ClInclude Include="GameObjects.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Mesh\Primitive.h">
-      <Filter>Header Files\Mesh</Filter>
-    </ClInclude>
-    <ClInclude Include="Mesh.h">
-      <Filter>Header Files\Mesh</Filter>
-    </ClInclude>
-    <ClInclude Include="VertexBuffer.h">
-      <Filter>Header Files\Others</Filter>
-    </ClInclude>
-    <ClInclude Include="Lib\Clock.h">
-      <Filter>Header Files\Others</Filter>
-    </ClInclude>
-    <ClInclude Include="Lib\Texture.h">
-      <Filter>Header Files\Others</Filter>
-    </ClInclude>
-    <ClInclude Include="Lib\Transform.h">
-      <Filter>Header Files\Others</Filter>
-    </ClInclude>
-    <ClInclude Include="Lib\LoadObj.h">
-      <Filter>Header Files\Others</Filter>
-    </ClInclude>
-    <ClInclude Include="Lib\Shaders.h">
-      <Filter>Header Files\Others</Filter>
+    <ClInclude Include="Graphics.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Lights.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Lib\ConstantBuffer.h">
-      <Filter>Header Files\Others</Filter>
+    <ClInclude Include="Lib\LoadObj.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Particle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh\Primitive.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="QuadTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RenderWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lib\Shaders.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Skybox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Mesh\Terrain.h">
-      <Filter>Header Files\Mesh</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Particle.h">
-      <Filter>Header Files\Mesh</Filter>
+    <ClInclude Include="Lib\Texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TGATexture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lib\Transform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lib\VertexBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_dx11.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_win32.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_internal.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imconfig.h">
+      <Filter>Other</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>Other</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>Other</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>Other</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="ResourcesFiles\DeferredGeometryShader.hlsl">
-      <Filter>Resource Files\Deffered</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\DeferredPixelShader.hlsl">
-      <Filter>Resource Files\Deffered</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\DeferredPixelShaderNormalMapping.hlsl">
-      <Filter>Resource Files\Deffered</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\DeferredVertexShader.hlsl">
-      <Filter>Resource Files\Deffered</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\GeometryShader.hlsl">
-      <Filter>Resource Files\Deffered</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\LastPassGeometryShader.hlsl">
-      <Filter>Resource Files\Deffered</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\LastPassPixelShader.hlsl">
-      <Filter>Resource Files\Deffered</Filter>
-    </FxCompile>
-    <FxCompile Include="ResourcesFiles\LastPassVertexShader.hlsl">
-      <Filter>Resource Files\Deffered</Filter>
-    </FxCompile>
-    <FxCompile Include="ParticleGS.hlsl">
-      <Filter>Resource Files\Particles</Filter>
-    </FxCompile>
-    <FxCompile Include="ParticlePS.hlsl">
-      <Filter>Resource Files\Particles</Filter>
-    </FxCompile>
-    <FxCompile Include="ParticleVS.hlsl">
-      <Filter>Resource Files\Particles</Filter>
-    </FxCompile>
-    <FxCompile Include="VertexShader.hlsl">
-      <Filter>Resource Files\other</Filter>
-    </FxCompile>
-    <FxCompile Include="PixelShader.hlsl">
-      <Filter>Resource Files\other</Filter>
-    </FxCompile>
-    <FxCompile Include="PixelShaderDefault.hlsl">
-      <Filter>Resource Files\other</Filter>
-    </FxCompile>
+    <Filter Include="Header Files">
+      <UniqueIdentifier>{4cd92682-97cd-4845-afa2-877fb7779e8c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader Files">
+      <UniqueIdentifier>{99688e23-e993-486c-948f-ea5d15bbc04b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="C++ Files">
+      <UniqueIdentifier>{24a19da3-3beb-4b3f-aa2a-72db75558ed3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="imgui">
+      <UniqueIdentifier>{1247aa10-d26f-453b-a38a-52c3418bc0fb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Other">
+      <UniqueIdentifier>{513e09b9-71e2-40d0-85bc-897ecbcb8153}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader Files\Deferred">
+      <UniqueIdentifier>{e1ac7f77-d762-465b-9e21-2dac3e880573}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader Files\LastPass">
+      <UniqueIdentifier>{70115a61-6157-4d27-9322-4f90b02895eb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader Files\Skybox">
+      <UniqueIdentifier>{9708ed62-4e9a-4c6a-8faf-805005d1c141}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader Files\Particle">
+      <UniqueIdentifier>{f0453092-415f-484b-9a37-bcffa8c71004}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader Files\Other Shaders">
+      <UniqueIdentifier>{4b2ef212-040b-4eec-9493-077aa30d1559}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <Filter>Other</Filter>
+    </None>
   </ItemGroup>
 </Project>
