--- a/3D Project DirectX/DirectXEngine/DirectXEngine.vcxproj
+++ b/3D Project DirectX/DirectXEngine/DirectXEngine.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Particle.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="ReflectionSphere.cpp" />
     <ClCompile Include="RenderWindow.cpp" />
     <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="TGATexture.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="Particle.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="ReflectionSphere.h" />
     <ClInclude Include="RenderWindow.h" />
     <ClInclude Include="Skybox.h" />
     <ClInclude Include="TGATexture.h" />
@@ -240,6 +242,14 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="ResourcesFiles\LastPassVertexShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\ReflectionPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="ResourcesFiles\ReflectionVS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
     </FxCompile>
